--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,15 @@ jobs:
                   node-version: 16.15.1
                   registry-url: https://registry.npmjs.org/
             - name: "📦 install"
-              run: npm ci
+              run: npm i
             - name: "🧶 lint"
               run: npm run lint
             - name: "💾 format"
               run: npm run lint:fix
             - name: "🧪 test"
               run: npm run test
-            - name: "☂️ coverage"
-              uses: codecov/codecov-action@v3
+            #- name: "☂️ coverage"
+             # uses: codecov/codecov-action@v3
             - name: "🚀 publish"
               run: npm publish --access public
               env:
