--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/template/starter/thunder.config.ts"],
-  "exclude": ["node_modules", "src/template/**/*"]
+  "exclude": ["node_modules"]
 }
