--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     /* Language and Environment */
-    "target": "ES2021",
+    "target": "ESNext",
     "lib": ["ESNext", "ES6", "DOM"],
 
     /* Modules */
