--- a/src/template/starter/.github/workflows/release.yml
+++ b/src/template/starter/.github/workflows/release.yml
@@ -17,7 +17,7 @@ jobs:
                   node-version: 16.15.1
                   registry-url: https://registry.npmjs.org/
             - name: "📦 install"
-              run: npm ci
+              run: npm i
             - name: "🧶 lint"
               run: npm run lint
             - name: "💾 format"
@@ -26,6 +26,8 @@ jobs:
               run: npm run test
             - name: "☂️ coverage"
               uses: codecov/codecov-action@v3
+            - name: "👷 Build"
+              run: npm run build
             - name: "🚀 publish"
               run: npm publish --access public
               env:
