--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lint": "eslint src/ --ext .js,.ts",
     "lint:fix": "eslint --fix .",
     "clean": "rm -rf dist",
-    "prepare": "husky install"
-  },
+    "prepublish": "npm run build"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/devamiza/thunder-cli.git"
