--- a/src/template/starter/thunder.config.json
+++ b/src/template/starter/thunder.config.json
@@ -52,7 +52,7 @@
       "lint": "eslint src/ --ext .js,.ts,tsx",
       "lint:fix": "eslint --fix .",
       "clean": "rm -rf dist",
-      "prepare": "husky install"
+      "prepublish": "npm run build"
     },
     "license": "MIT",
     "dependencies": {},
