--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "email": "admin@devamiza.com",
     "url": "https://github.com/devamiza"
   },
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "type": "module",
   "main": "dist/src/index.js",
@@ -14,7 +14,7 @@
     "dist"
   ],
   "bin": {
-    "thunder": "dist/index.js"
+    "thunder": "dist/src/index.js"
   },
   "scripts": {
     "start": "node dist/index.js",
