moving templater dir 1 level upper

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "files": [
-    "dist"
-  ],
+    "dist",
+    "template"
+    ],
   "bin": {
     "thunder": "dist/src/index.js"
   },
